Test/git-issues/git-issue-2134.dfy.expect
git-issue-2134.dfy(8,12): Error: Cyclic dependency among declarations: P -> A -> B -> P
git-issue-2134.dfy(15,12): Error: Cyclic dependency among declarations: P -> A -> Q -> B -> P
git-issue-2134.dfy(22,12): Error: Cyclic dependency among declarations: P -> B -> P
git-issue-2134.dfy(27,8): Error: Cyclic dependency among declarations: X -> B -> X
git-issue-2134.dfy(32,11): Error: Cyclic dependency among declarations: X -> B -> X
git-issue-2134.dfy(31,10): Error: Cyclic dependency among declarations: B -> B -> X
git-issue-2134.dfy(41,12): Error: Cyclic dependency among declarations: P -> A -> B -> P
git-issue-2134.dfy(48,12): Error: Cyclic dependency among declarations: P -> A -> Q -> B -> P
git-issue-2134.dfy(55,12): Error: Cyclic dependency among declarations: P -> B -> P
git-issue-2134.dfy(60,8): Error: Cyclic dependency among declarations: X -> B -> X
git-issue-2134.dfy(65,11): Error: Cyclic dependency among declarations: X -> B -> X
git-issue-2134.dfy(64,7): Error: Cyclic dependency among declarations: B -> B -> X
12 resolution/type errors detected in git-issue-2134.dfy
